--- a/index.html
+++ b/index.html
@@ -15,16 +15,26 @@
     <meta name="description" content="Phuong Hoang">
     <meta name="keywords" content="Phuong Hoang">
 
+    <!-- Meta Tags -->
+    <meta name="description"
+        content="Phuong Hoang">
+    <meta name="keywords"
+        content="Phuong Hoang">
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Phuong Hoang Consulting" />
+    <meta property="og:description"
+        content="Phuong Hoang Consulting" />
+
+     <meta property="og:url" content="https://phuong-hoang-delta.vercel.app/" />
+    <meta property="og:site_name" content="Phuong Hoang Consulting" />
     <!-- Image for Social Media Preview -->
-    <meta property="og:image" content="https://.com/preview..avif" />
+    <meta property="og:image" content="https://phuong-hoang-delta.vercel.app/preview..avif" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/png" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-
-
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
