--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
      <meta property="og:url" content="https://phuong-hoang-delta.vercel.app/" />
     <meta property="og:site_name" content="Phuong Hoang Consulting" />
     <!-- Image for Social Media Preview -->
-    <meta property="og:image" content="https://phuong-hoang-delta.vercel.app/preview..avif" />
+    <meta property="og:image" content="https://phuong-hoang-delta.vercel.app/assets/images/preview.avif" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/png" />
