--- a/index.html
+++ b/index.html
@@ -16,16 +16,13 @@
     <meta name="keywords" content="Phuong Hoang">
 
     <!-- Meta Tags -->
-    <meta name="description"
-        content="Phuong Hoang">
-    <meta name="keywords"
-        content="Phuong Hoang">
+    <meta name="description" content="Phuong Hoang">
+    <meta name="keywords" content="Phuong Hoang">
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Phuong Hoang Consulting" />
-    <meta property="og:description"
-        content="Phuong Hoang Consulting" />
+    <meta property="og:description" content="Phuong Hoang Consulting" />
 
-     <meta property="og:url" content="https://phuong-hoang-delta.vercel.app/" />
+    <meta property="og:url" content="https://phuong-hoang-delta.vercel.app/" />
     <meta property="og:site_name" content="Phuong Hoang Consulting" />
     <!-- Image for Social Media Preview -->
     <meta property="og:image" content="https://phuong-hoang-delta.vercel.app/assets/images/preview.avif" />
@@ -124,7 +121,7 @@
                         <span>(+1) 971-303-9686</span>
                     </a>
                     <a href="https://calendly.com/peyton-hoang97/30min" class="nav-btn boton-elegante"
-                        aria-label="Get quote">
+                        aria-label="Get quote" target="_blank">
                         Get free quote
                     </a>
                 </div>
@@ -197,7 +194,7 @@
                             </div>
                             <div class="hero-btns">
                                 <a href="https://calendly.com/peyton-hoang97/30min" aria-label="Book free consultation"
-                                    class="boton-elegante">
+                                    class="boton-elegante" target="_blank">
                                     Book free consultation
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18"
                                         fill="none">
@@ -226,7 +223,8 @@
                     <div class="col-lg-6 d-none d-lg-block">
                         <div class="hero-frame-content">
                             <div class="hero-frame">
-                                <img width="544" height="544" class="img-fluid" src="assets/images/hero-img.png" alt="Peyton Hoang">
+                                <img width="464" height="464" class="img-fluid" src="assets/images/hero-img.png"
+                                    alt="Peyton Hoang">
                             </div>
                         </div>
                     </div>
@@ -296,7 +294,7 @@
                 </div>
                 <div class="text-center mt-3 mt-md-5">
                     <a href="https://calendly.com/peyton-hoang97/30min" aria-label="Book free consultation"
-                        class="boton-elegante btn-max-80">
+                        class="boton-elegante btn-max-80" target="_blank">
                         Book free consultation
                     </a>
                 </div>
@@ -332,15 +330,15 @@
                             <p>Tailored, secure, and scalable apps built for your business goals.</p>
                             <div>
                                 <div class="services-card__check">
-                                    <i class="fa-solid fa-check" style="color: #118ab2;"></i>
+                                    <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
                                     <span>Built with MERN stack (MongoDB, Express, React, Node.js)</span>
                                 </div>
                                 <div class="services-card__check">
-                                    <i class="fa-solid fa-check" style="color: #118ab2;"></i>
+                                    <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
                                     <span>Secure APIs & clean, maintainable code</span>
                                 </div>
                                 <div class="services-card__check">
-                                    <i class="fa-solid fa-check" style="color: #118ab2;"></i>
+                                    <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
                                     <span>Optimized for performance & future growth</span>
                                 </div>
                             </div>
@@ -365,15 +363,15 @@
                             <p>Smarter apps with AI automation, analytics, and personalization to drive growth.</p>
                             <div>
                                 <div class="services-card__check">
-                                    <i class="fa-solid fa-check" style="color: #118ab2;"></i>
+                                    <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
                                     <span>Integrations with OpenAI, LangChain, Pinecone, and custom ML models</span>
                                 </div>
                                 <div class="services-card__check">
-                                    <i class="fa-solid fa-check" style="color: #118ab2;"></i>
+                                    <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
                                     <span>Personalized user experiences & predictive insights</span>
                                 </div>
                                 <div class="services-card__check">
-                                    <i class="fa-solid fa-check" style="color: #118ab2;"></i>
+                                    <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
                                     <span>Automation tools that save time and boost efficiency</span>
                                 </div>
                             </div>
@@ -397,15 +395,15 @@
                             <p>Fast, reliable, and cost-efficient cloud infrastructure powered by AWS.</p>
                             <div>
                                 <div class="services-card__check">
-                                    <i class="fa-solid fa-check" style="color: #118ab2;"></i>
+                                    <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
                                     <span>Expertise with EC2, Lambda, S3, DynamoDB, and API Gateway</span>
                                 </div>
                                 <div class="services-card__check">
-                                    <i class="fa-solid fa-check" style="color: #118ab2;"></i>
+                                    <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
                                     <span>Scalable architecture for apps of any size</span>
                                 </div>
                                 <div class="services-card__check">
-                                    <i class="fa-solid fa-check" style="color: #118ab2;"></i>
+                                    <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
                                     <span>Built-in monitoring, backups, and security best practices</span>
                                 </div>
                             </div>
@@ -474,15 +472,15 @@
                             <p>Eliminate bugs, boost speed, and keep your app running at peak performance.</p>
                             <div>
                                 <div class="services-card__check">
-                                    <i class="fa-solid fa-check" style="color: #118ab2;"></i>
+                                    <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
                                     <span>Debugging with real-time monitoring & error tracking tools</span>
                                 </div>
                                 <div class="services-card__check">
-                                    <i class="fa-solid fa-check" style="color: #118ab2;"></i>
+                                    <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
                                     <span>Database optimization & front-end performance tuning</span>
                                 </div>
                                 <div class="services-card__check">
-                                    <i class="fa-solid fa-check" style="color: #118ab2;"></i>
+                                    <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
                                     <span>Security patches & regular updates for reliability</span>
                                 </div>
                             </div>
@@ -498,7 +496,7 @@
                         </p>
                         <div class="hero-btns cta-buttons">
                             <a href="https://calendly.com/peyton-hoang97/30min" aria-label="Book free consultation"
-                                class="boton-elegante">
+                                class="boton-elegante" target="_blank">
                                 Book free consultation
 
                             </a>
@@ -532,21 +530,21 @@
                             <span class="about-content__subhead">I deliver production-ready apps with:</span>
                             <div class="mt-3 mt-lg-2">
                                 <div class="services-card__check">
-                                    <i class="fa-solid fa-check" style="color: #118ab2;"></i>
+                                    <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
                                     <span>Clear milestones & fixed-price milestones</span>
                                 </div>
                                 <div class="services-card__check">
-                                    <i class="fa-solid fa-check" style="color: #118ab2;"></i>
+                                    <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
                                     <span>Weekly updates so you’re always in control</span>
                                 </div>
                                 <div class="services-card__check">
-                                    <i class="fa-solid fa-check" style="color: #118ab2;"></i>
+                                    <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
                                     <span>Full handover docs and scalable code</span>
                                 </div>
                             </div>
                             <div class="mt-4">
                                 <a href="https://calendly.com/peyton-hoang97/30min" aria-label="Free Consult"
-                                    class="boton-elegante">
+                                    class="boton-elegante" target="_blank">
                                     Book a Free 30-Minute Consult
                                 </a>
                             </div>
@@ -922,15 +920,18 @@
         <section class="section" id="recentWork">
             <div class="container">
                 <h2>Recent work</h2>
-                <div class="row mt-4 gx-5 gy-5 justify-content-center">
+                <div class="row mt-2 mt-lg-4 gx-5 gy-5 justify-content-center">
                     <div class="col-lg-6">
+                        <div class="recent-work__info">
+                            <p>AI-Powered Content Repurposer – Save Hours on Social Media Marketing</p>
+                        </div>
                         <div style="position: relative; padding-bottom: 62.5%; height: 0;"><iframe
                                 src="https://www.loom.com/embed/72e04f8fb88f4624bf684b661dea00d4?sid=c97ce83c-1560-43e5-94f7-ceb576c9e117"
                                 frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen
-                                style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" title="Content Repurposer"></iframe></div>
+                                style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+                                title="Content Repurposer"></iframe></div>
                         <div class="recent-work__info">
-                            <p>AI-Powered Content Repurposer – Save Hours on Social Media Marketing</p>
-                            <p>Description:
+                            <p class="recent-work-description">Description:
                                 A full-stack MERN + AI SaaS that transforms long-form blogs into ready-to-share posts
                                 for Twitter, LinkedIn, and Instagram. Built with secure Firebase Authentication, MongoDB
                                 scaling, and Vercel deployment. Watch how creators cut content workflows from hours to
@@ -938,13 +939,16 @@
                         </div>
                     </div>
                     <div class="col-lg-6">
+                        <div class="recent-work__info">
+                            <p>AI-Powered Content Repurposer – Save Hours on Social Media Marketing</p>
+                        </div>
                         <div style="position: relative; padding-bottom: 62.5%; height: 0;"><iframe
                                 src="https://www.loom.com/embed/a2858b2890b1476a87bbba1059aedaa7?sid=45ab711f-227c-4b49-806a-294f7716f2c7"
                                 frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen
-                                style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" title="Etsy Seller Tool"></iframe></div>
+                                style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+                                title="Etsy Seller Tool"></iframe></div>
                         <div class="recent-work__info">
-                            <p>AI-Powered Etsy Seller Tool – Launch & Grow Shops Faster</p>
-                            <p>Description:
+                            <p class="recent-work-description">Description:
                                 An AI-integrated MERN app designed for new Etsy sellers. From shop names to product SEO
                                 tags, automated branding visuals, and pricing strategies — this platform streamlines
                                 e-commerce setup. Built with Firebase Auth, AWS-ready backend, and Amplify deployment.
@@ -959,7 +963,7 @@
                             <h3>Want an AI-powered tool tailored to your business?</h3>
                             <div class="hero-btns cta-buttons mt-4 mt-lg-5">
                                 <a href="https://calendly.com/peyton-hoang97/30min" aria-label="Book Consult"
-                                    class="boton-elegante">
+                                    class="boton-elegante" target="_blank">
                                     Book a Free 30-Min Consult
                                 </a>
                             </div>
@@ -980,10 +984,13 @@
                     <h4>Peyton Hoang</h4>
                     <p>Software engineer contractor</p>
                     <div class="social-icons">
-                        <a href="#" aria-label="Peyton instagram"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="#" aria-label="Peyton linkedin"><i class="fa-brands fa-linkedin-in"></i></a>
-                        <a href="#" aria-label="Peyton twitter"><i class="fa-brands fa-twitter"></i></a>
-                        <a href="#" aria-label="Peyton facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="#" aria-label="Peyton instagram" target="_blank"><i
+                                class="fa-brands fa-instagram"></i></a>
+                        <a href="#" aria-label="Peyton linkedin" target="_blank"><i
+                                class="fa-brands fa-linkedin-in"></i></a>
+                        <a href="#" aria-label="Peyton twitter" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="#" aria-label="Peyton facebook" target="_blank"><i
+                                class="fa-brands fa-facebook-f"></i></a>
                     </div>
                 </div>
 
@@ -1043,7 +1050,7 @@
         gsap.to(".marquee-row--bottom .marquee-content", {
             xPercent: -100,
             repeat: -1,
-            duration: 20,
+            duration: 30,
             ease: "linear",
             modifiers: {
                 xPercent: gsap.utils.wrap(-100, 0)
