--- a/index.html
+++ b/index.html
@@ -287,10 +287,7 @@
                                 </div>
                             </div>
                         </div>
-
-
                     </div>
-
                 </div>
                 <div class="text-center mt-3 mt-md-5">
                     <a href="https://calendly.com/peyton-hoang97/30min" aria-label="Book free consultation"
@@ -920,10 +917,11 @@
         <section class="section" id="recentWork">
             <div class="container">
                 <h2>Recent work</h2>
-                <div class="row mt-2 mt-lg-4 gx-5 gy-5 justify-content-center">
+                <h4 class="mt-3 text-center">See how I turn ideas into scalable, production-ready apps</h4>
+                <div class="row mt-1 mt-sm-2 mt-lg-4 gx-5 gy-5 justify-content-center">
                     <div class="col-lg-6">
                         <div class="recent-work__info">
-                            <p>AI-Powered Content Repurposer – Save Hours on Social Media Marketing</p>
+                            <p><b>AI-Powered Content Repurposer <br>– Save Hours on Social Media Marketing</b></p>
                         </div>
                         <div style="position: relative; padding-bottom: 62.5%; height: 0;"><iframe
                                 src="https://www.loom.com/embed/72e04f8fb88f4624bf684b661dea00d4?sid=c97ce83c-1560-43e5-94f7-ceb576c9e117"
@@ -936,11 +934,17 @@
                                 for Twitter, LinkedIn, and Instagram. Built with secure Firebase Authentication, MongoDB
                                 scaling, and Vercel deployment. Watch how creators cut content workflows from hours to
                                 minutes.</p>
+                            <div class="mt-1">
+                                <a href="https://calendly.com/peyton-hoang97/30min" aria-label="Free Consult"
+                                    class="boton-elegante" target="_blank">
+                                    Start Your project now
+                                </a>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="recent-work__info">
-                            <p>AI-Powered Content Repurposer – Save Hours on Social Media Marketing</p>
+                            <p><b>AI-Powered Etsy Seller Tool <br>– Launch & Grow Shops Faster</b></p>
                         </div>
                         <div style="position: relative; padding-bottom: 62.5%; height: 0;"><iframe
                                 src="https://www.loom.com/embed/a2858b2890b1476a87bbba1059aedaa7?sid=45ab711f-227c-4b49-806a-294f7716f2c7"
@@ -953,22 +957,45 @@
                                 tags, automated branding visuals, and pricing strategies — this platform streamlines
                                 e-commerce setup. Built with Firebase Auth, AWS-ready backend, and Amplify deployment.
                             </p>
-                        </div>
-                    </div>
-                    <div class="col-12 col-lg-8 text-center">
-                        <img class="img-fluid" src="assets/images/git-profile.avif" alt="Github Profile">
-                    </div>
-                    <section class="cta-section">
-                        <div class="cta-container">
-                            <h3>Want an AI-powered tool tailored to your business?</h3>
-                            <div class="hero-btns cta-buttons mt-4 mt-lg-5">
-                                <a href="https://calendly.com/peyton-hoang97/30min" aria-label="Book Consult"
+                            <div class="mt-1">
+                                <a href="https://calendly.com/peyton-hoang97/30min" aria-label="Free Consult"
                                     class="boton-elegante" target="_blank">
-                                    Book a Free 30-Min Consult
+                                    Start Your project now
                                 </a>
                             </div>
                         </div>
-                    </section>
+                    </div>
+                    <div class="col-12 col-lg-8">
+                        <img class="img-fluid mt-3" src="assets/images/git-profile.avif" alt="Github Profile">
+                        <div class="recent-work__info">
+                            <p class="recent-work-description">Description:
+                                Full-stack apps, AI integrations, SaaS MVPs — all code is production-ready and
+                                well-documented.
+                            </p>
+                            <div class="mt-1 text-center">
+                                <a href="https://github.com/PhuongHoang68" aria-label="Free Consult"
+                                    class="boton-elegante" target="_blank">
+                                    See 36+ Projects on GitHub
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section pt-2 pt-md-5">
+            <div class="container">
+                <div class="cta-section">
+                    <div class="cta-container">
+                        <h3>Want an AI-powered tool tailored to your business?</h3>
+                        <div class="hero-btns cta-buttons mt-4 mt-lg-5">
+                            <a href="https://calendly.com/peyton-hoang97/30min" aria-label="Book Consult"
+                                class="boton-elegante" target="_blank">
+                                Book a Free 30-Min Consult
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
