--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <div class="col-lg-6">
                         <div class="hero-content">
                             <h1>Peyton Hoang <br>Consulting</h1>
-                            <span class="mt-3">Software engineer contractor</span>
+                            <span class="mt-3">Milestone-based delivery & flawless execution. <br>Full-stack MERN + AWS + AI apps delivered fast and reliably.</span>
                             <div class="hero-frame mt-5 d-block d-lg-none">
                                 <img class="img-fluid" src="assets/images/hero-img.png" alt="Peyton Hoang">
                             </div>
@@ -157,7 +157,7 @@
                                                 fill="#fff" opacity="1" data-original="#fff" class=""></path>
                                         </g>
                                     </svg>
-                                    <span>AI-Powered Solutions: Boost efficiency—start today</span>
+                                    <span>AI Solutions: Automate workflows & save time</span>
                                 </div>
                                 <div class="hero-list mt-3">
                                     <svg xmlns="http://www.w3.org/2000/svg" version="1.1"
@@ -173,7 +173,7 @@
                                                 fill="#fff" opacity="1" data-original="#fff" class=""></path>
                                         </g>
                                     </svg>
-                                    <span>Custom Web Apps: Launch your app now</span>
+                                    <span>Custom Web Apps: Launch your product faster</span>
                                 </div>
                                 <div class="hero-list mt-3">
                                     <svg xmlns="http://www.w3.org/2000/svg" version="1.1"
@@ -189,7 +189,7 @@
                                                 fill="#fff" opacity="1" data-original="#fff" class=""></path>
                                         </g>
                                     </svg>
-                                    <span>AWS Cloud: Scale securely. Now is a great time to start</span>
+                                    <span>AWS Cloud: Scale securely with confidence</span>
                                 </div>
                             </div>
                             <div class="hero-btns">
@@ -236,7 +236,7 @@
         <!-- Benefits Start -->
         <section class="section" id="benefits">
             <div class="container">
-                <h2>Why Businesses Choose Me for Their Software Projects</h2>
+                <h2>Why Businesses Trust Me for Flawless Software Delivery</h2>
                 <div class="row mt-3 mt-md-5 gy-4 gx-5">
                     <div class="col-lg-5">
                         <div class="benefits-sticky">
