--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Paytone+One&family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <!-- Splide CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide/dist/css/splide.min.css">
@@ -138,12 +138,14 @@
                     <div class="col-lg-6">
                         <div class="hero-content">
                             <h1>Peyton Hoang <br>Consulting</h1>
-                            <span class="mt-3">Milestone-based delivery & flawless execution. <br>Full-stack MERN + AWS + AI apps delivered fast and reliably.</span>
+                            <span class="mt-3">Milestone-based delivery & flawless execution. <br>Full-stack MERN + AWS
+                                + AI apps delivered fast and reliably.</span>
                             <div class="hero-frame mt-5 d-block d-lg-none">
                                 <img class="img-fluid" src="assets/images/hero-img.png" alt="Peyton Hoang">
                             </div>
                             <div class="hero-list-main">
-                                <div class="hero-list mt-5">
+                                <span class="about-content__subhead">Build, Automate & Scale With Confidence</span>
+                                <div class="hero-list mt-4">
                                     <svg xmlns="http://www.w3.org/2000/svg" version="1.1"
                                         xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="24" x="0" y="0"
                                         viewBox="0 0 43.349 43.349" style="enable-background:new 0 0 512 512"
@@ -914,7 +916,7 @@
         <!-- RecentWork Start -->
         <section class="section" id="recentWork">
             <div class="container">
-                <h2>Recent work</h2>
+                <h2>Recent works</h2>
                 <h4 class="mt-3 text-center">See how I turn ideas into scalable, production-ready apps</h4>
                 <div class="row mt-1 mt-sm-2 mt-lg-4 gx-5 gy-5 justify-content-center">
                     <div class="col-lg-6">
@@ -964,7 +966,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-lg-8">
-                        <img class="img-fluid mt-3" src="assets/images/git-profile.avif" alt="Github Profile">
+                        <img class="img-fluid mt-4 mt-lg-5" src="assets/images/git-profile.avif" alt="Github Profile">
                         <div class="recent-work__info">
                             <p class="recent-work-description">Description:
                                 Full-stack apps, AI integrations, SaaS MVPs — all code is production-ready and
@@ -982,7 +984,7 @@
             </div>
         </section>
 
-        <section class="section pt-2 pt-md-5">
+        <section class="section pt-0 pt-md-3">
             <div class="container">
                 <div class="cta-section">
                     <div class="cta-container">
@@ -1009,13 +1011,9 @@
                     <h4>Peyton Hoang</h4>
                     <p>Software engineer contractor</p>
                     <div class="social-icons">
-                        <a href="#" aria-label="Peyton instagram" target="_blank"><i
-                                class="fa-brands fa-instagram"></i></a>
-                        <a href="#" aria-label="Peyton linkedin" target="_blank"><i
+                        <a href="http://www.linkedin.com/in/peyton-hoang" aria-label="Peyton linkedin" target="_blank"><i
                                 class="fa-brands fa-linkedin-in"></i></a>
-                        <a href="#" aria-label="Peyton twitter" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-                        <a href="#" aria-label="Peyton facebook" target="_blank"><i
-                                class="fa-brands fa-facebook-f"></i></a>
+                        <a href="https://www.upwork.com/freelancers/~01b70563a5315ceddd" aria-label="Peyton upwork" target="_blank"><i class="fa-brands fa-upwork" style="font-size: 20px;"></i></a>
                     </div>
                 </div>
 
