--- a/index.html
+++ b/index.html
@@ -5,22 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Phuong Hoang</title>
+    <title>Phuong Hoang | MERN, AWS & AI Developer | Milestone-Based Delivery</title>
     <!-- Favicon -->
     <link rel="icon" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" sizes="192x192" href="android-chrome-192x192.png" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
     <link rel="manifest" href="site.webmanifest" />
 
-    <meta name="description" content="Phuong Hoang">
-    <meta name="keywords" content="Phuong Hoang">
+    <meta name="description" content="Hire Phuong Hoang for milestone-based MERN, AWS, and AI-powered applications. Reliable, fast, and end-to-end execution for startups and businesses.">
+    <meta name="keywords" content="Phuong Hoang, MERN developer, AWS cloud apps, AI-powered applications, Milestone-based delivery, Reliable web apps, Full-stack development, Startup software solutions, Scalable web apps, End-to-end execution, Fast project delivery, Enterprise web development">
 
     <!-- Meta Tags -->
-    <meta name="description" content="Phuong Hoang">
-    <meta name="keywords" content="Phuong Hoang">
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Phuong Hoang Consulting" />
-    <meta property="og:description" content="Phuong Hoang Consulting" />
+    <meta property="og:title" content="Phuong Hoang | MERN, AWS & AI Developer | Milestone-Based Delivery" />
+    <meta property="og:description" content="Hire Phuong Hoang for milestone-based MERN, AWS, and AI-powered applications. Reliable, fast, and end-to-end execution for startups and businesses." />
 
     <meta property="og:url" content="https://phuong-hoang-delta.vercel.app/" />
     <meta property="og:site_name" content="Phuong Hoang Consulting" />
@@ -32,6 +30,9 @@
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Phuong Hoang | MERN, AWS & AI Developer | Milestone-Based Delivery">
+    <meta name="twitter:description" content="Hire Phuong Hoang for milestone-based MERN, AWS, and AI-powered applications. Reliable, fast, and end-to-end execution for startups and businesses.">
+    <meta name="twitter:image" content="https://phuong-hoang-delta.vercel.app/assets/images/preview.avif">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
