--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
             <a class="navbar-brand" aria-label="logo" href="index.html">
-                <span>Peyton Hoang</span>
+                <span>Peyton Hwang consultant</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -1009,7 +1009,7 @@
             <div class="footer-container">
                 <!-- Left -->
                 <div class="footer-left">
-                    <h4>Peyton Hoang</h4>
+                    <h4>Peyton Hwang consultant</h4>
                     <p>Software engineer contractor</p>
                     <div class="social-icons">
                         <a href="http://www.linkedin.com/in/peyton-hoang" aria-label="Peyton linkedin" target="_blank"><i
