--- a/index.html
+++ b/index.html
@@ -138,9 +138,8 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="hero-content">
-                            <h1>Peyton Hoang <br>Consulting</h1>
-                            <span class="mt-3">Milestone-based delivery & flawless execution. <br>Full-stack MERN + AWS
-                                + AI apps delivered fast and reliably.</span>
+                            <h1>Custom Web App Development Services</h1>
+                            <span class="mt-3">Milestone-Based Delivery for Startups & Small Businesses Using MERN, AWS, and AI.</span>
                             <div class="hero-frame mt-5 d-block d-lg-none">
                                 <img class="img-fluid" src="assets/images/hero-img.png" alt="Peyton Hoang">
                             </div>
@@ -237,7 +236,8 @@
         <!-- Benefits Start -->
         <section class="section" id="benefits">
             <div class="container">
-                <h2>Why Businesses Trust Me for Flawless Software Delivery</h2>
+                <h2>Why Businesses Trust US for Custom Web App Development</h2>
+                <h4 class="mt-3 text-center">Flawless Milestone-Based Delivery for MERN, AWS & AI-Powered Apps</h4>
                 <div class="row mt-3 mt-md-5 gy-4 gx-5">
                     <div class="col-lg-5">
                         <div class="benefits-sticky">
@@ -251,31 +251,28 @@
                                 <h3>1.</h3>
                                 <div>
                                     <h4>Trusted by Startups & SMBs</h4>
-                                    <p>5-star reviews, repeat clients, and projects from SaaS MVPs to $30k enterprise
-                                        apps delivered successfully.</p>
+                                    <p>5-star reviews and repeat clients, delivering projects from SaaS MVPs to $30k enterprise web apps.</p>
                                 </div>
                             </div>
                             <div class="benefits-content__list mt-2">
                                 <h3>2.</h3>
                                 <div>
-                                    <h4>Zero Surprises</h4>
-                                    <p>Every milestone is fixed-price and reviewed with you before payment—so you’re
-                                        never at risk.</p>
+                                    <h4>Zero Surprises, Fixed-Price Milestones</h4>
+                                    <p>Every custom web application is broken into reviewed milestones. So you pay only for what’s delivered.</p>
                                 </div>
                             </div>
                             <div class="benefits-content__list mt-2">
                                 <h3>3.</h3>
                                 <div>
                                     <h4>Flexible & Founder-Friendly</h4>
-                                    <p>Start small, add features as you go—so you can launch fast without
-                                        overcommitting.</p>
+                                    <p>Start small, add features as you grow. Launch fast without overcommitting resources.</p>
                                 </div>
                             </div>
                             <div class="benefits-content__list mt-2">
                                 <h3>4.</h3>
                                 <div>
                                     <h4>Stress-Free Communication</h4>
-                                    <p>Weekly progress updates and quick responses keep you in control at every step.
+                                    <p>Weekly updates and prompt responses keep you in control at every step of your web app development.
                                     </p>
                                 </div>
                             </div>
@@ -283,8 +280,7 @@
                                 <h3>5.</h3>
                                 <div>
                                     <h4>Built to Scale</h4>
-                                    <p>Production-grade MERN + AWS + AI integrations, secure maintainable code, and
-                                        complete handover docs so you never outgrow your build.</p>
+                                    <p>Production-grade MERN + AWS + AI integrations, secure and maintainable code, with complete handover documentation.</p>
                                 </div>
                             </div>
                         </div>
