--- a/index.html
+++ b/index.html
@@ -320,20 +320,20 @@
                                     </g>
                                 </svg>
                             </div>
-                            <h3>Custom Web Apps</h3>
-                            <p>Tailored, secure, and scalable apps built for your business goals.</p>
+                            <h3>Custom Web App Development</h3>
+                            <p>Tailored, scalable, and secure web applications to grow your business.</p>
                             <div>
                                 <div class="services-card__check">
                                     <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
-                                    <span>Built with MERN stack (MongoDB, Express, React, Node.js)</span>
+                                    <span>MERN stack apps for speed, reliability, and maintainability.</span>
                                 </div>
                                 <div class="services-card__check">
                                     <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
-                                    <span>Secure APIs & clean, maintainable code</span>
+                                    <span>Secure APIs & clean code optimized for performance and scale.</span>
                                 </div>
                                 <div class="services-card__check">
                                     <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
-                                    <span>Optimized for performance & future growth</span>
+                                    <span>Startups to enterprise-ready solutions built for long-term growth.</span>
                                 </div>
                             </div>
                         </div>
@@ -353,20 +353,20 @@
                                 </svg>
                             </div>
 
-                            <h3>AI-Powered Apps</h3>
-                            <p>Smarter apps with AI automation, analytics, and personalization to drive growth.</p>
+                            <h3>AI-Powered Web Applications</h3>
+                            <p>Smarter apps with AI automation, analytics, and personalization.</p>
                             <div>
                                 <div class="services-card__check">
                                     <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
-                                    <span>Integrations with OpenAI, LangChain, Pinecone, and custom ML models</span>
+                                    <span>Integrations with OpenAI, LangChain, Pinecone, and custom ML models.</span>
                                 </div>
                                 <div class="services-card__check">
                                     <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
-                                    <span>Personalized user experiences & predictive insights</span>
+                                    <span>Personalized user experiences and predictive insights.</span>
                                 </div>
                                 <div class="services-card__check">
                                     <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
-                                    <span>Automation tools that save time and boost efficiency</span>
+                                    <span>Automation tools to save time, boost efficiency, and increase engagement.</span>
                                 </div>
                             </div>
                         </div>
@@ -386,19 +386,19 @@
                                 </svg>
                             </div>
                             <h3>AWS Cloud Solutions</h3>
-                            <p>Fast, reliable, and cost-efficient cloud infrastructure powered by AWS.</p>
+                            <p>Fast, reliable, and cost-efficient cloud infrastructure.</p>
                             <div>
                                 <div class="services-card__check">
                                     <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
-                                    <span>Expertise with EC2, Lambda, S3, DynamoDB, and API Gateway</span>
+                                    <span>Scalable architecture with EC2, Lambda, S3, DynamoDB, and API Gateway.</span>
                                 </div>
                                 <div class="services-card__check">
                                     <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
-                                    <span>Scalable architecture for apps of any size</span>
+                                    <span>Built-in monitoring, backups, and security best practices.</span>
                                 </div>
                                 <div class="services-card__check">
                                     <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
-                                    <span>Built-in monitoring, backups, and security best practices</span>
+                                    <span>Optimized for apps of any size, from MVPs to enterprise projects.</span>
                                 </div>
                             </div>
                         </div>
@@ -462,20 +462,20 @@
                                     </g>
                                 </svg>
                             </div>
-                            <h3>Bug Fixes & Optimization</h3>
-                            <p>Eliminate bugs, boost speed, and keep your app running at peak performance.</p>
+                            <h3>Bug Fixes & App Optimization</h3>
+                            <p>Keep your web applications running smoothly and securely.</p>
                             <div>
                                 <div class="services-card__check">
                                     <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
-                                    <span>Debugging with real-time monitoring & error tracking tools</span>
+                                    <span>Real-time debugging with monitoring and error tracking tools.</span>
                                 </div>
                                 <div class="services-card__check">
                                     <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
-                                    <span>Database optimization & front-end performance tuning</span>
+                                    <span>Database & front-end optimization for speed and reliability.</span>
                                 </div>
                                 <div class="services-card__check">
                                     <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
-                                    <span>Security patches & regular updates for reliability</span>
+                                    <span>Regular security patches and updates for peace of mind.</span>
                                 </div>
                             </div>
                         </div>
@@ -483,10 +483,9 @@
                 </div>
                 <section class="cta-section">
                     <div class="cta-container">
-                        <h3>Ready to bring your ideas to life?</h3>
+                        <h3>Ready to build fast, scalable, and future-proof solutions?</h3>
                         <p>
-                            Let’s collaborate to build fast, scalable, and future-proof solutions.
-                            Book a free consultation or explore my projects on GitHub.
+                            Book a free consultation or explore my GitHub projects to see how I can help scale your business.
                         </p>
                         <div class="hero-btns cta-buttons">
                             <a href="https://calendly.com/peyton-hoang97/30min" aria-label="Book free consultation"
@@ -512,28 +511,24 @@
                     <div class="col-lg-6">
                         <div class="about-content">
                             <h2 class="text-start mb-4">About me</h2>
-                            <p>I’m a full-stack software engineer specializing in MERN, AWS, and AI integrations. I
-                                build
-                                apps that are secure, scalable, and maintainable — so your idea grows with your
-                                business.</p>
-                            <p>I partner with startups and SMBs who want to launch or scale web apps quickly, without
-                                headaches, delays, or messy handovers.</p>
+                            <p>I’m a full-stack software engineer specializing in MERN stack, AWS cloud solutions, and AI-powered web app development. I build secure, scalable, and maintainable web applications that grow with your business.</p>
+                            <p>I partner with startups, SMBs, and tech founders who want to launch or scale web apps quickly, without headaches, delays, or messy handovers.</p>
                             <div class="text-center mt-5 mt-lg-2 mb-5 mb-lg-2 d-block d-lg-none about-img">
                                 <img class="img-fluid" src="assets/images/about-1.svg" alt="About Peyton Hoang">
                             </div>
-                            <span class="about-content__subhead">I deliver production-ready apps with:</span>
+                            <span class="about-content__subhead">What you get when working with me:</span>
                             <div class="mt-3 mt-lg-2">
                                 <div class="services-card__check">
                                     <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
-                                    <span>Clear milestones & fixed-price milestones</span>
+                                    <span>Milestone-based delivery & fixed-price milestones — know exactly what you’re paying for.</span>
                                 </div>
                                 <div class="services-card__check">
                                     <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
-                                    <span>Weekly updates so you’re always in control</span>
+                                    <span>Weekly updates — stay in control of your project every step of the way.</span>
                                 </div>
                                 <div class="services-card__check">
                                     <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
-                                    <span>Full handover docs and scalable code</span>
+                                    <span>Production-ready code & full handover docs — scalable, maintainable, and ready for future growth.</span>
                                 </div>
                             </div>
                             <div class="mt-4">
