--- a/index.html
+++ b/index.html
@@ -909,7 +909,7 @@
         <section class="section" id="recentWork">
             <div class="container">
                 <h2>Recent works</h2>
-                <h4 class="mt-3 text-center">See how I turn ideas into scalable, production-ready apps</h4>
+                <h4 class="mt-3 text-center">Turning ideas into secure, scalable, and production-ready web applications</h4>
                 <div class="row mt-1 mt-sm-2 mt-lg-4 gx-5 gy-5 justify-content-center">
                     <div class="col-lg-6">
                         <div class="recent-work__info">
@@ -922,10 +922,7 @@
                                 title="Content Repurposer"></iframe></div>
                         <div class="recent-work__info">
                             <p class="recent-work-description">Description:
-                                A full-stack MERN + AI SaaS that transforms long-form blogs into ready-to-share posts
-                                for Twitter, LinkedIn, and Instagram. Built with secure Firebase Authentication, MongoDB
-                                scaling, and Vercel deployment. Watch how creators cut content workflows from hours to
-                                minutes.</p>
+                                A full-stack MERN + AI SaaS that transforms long-form blogs into ready-to-share posts for Twitter, LinkedIn, and Instagram. Built with secure Firebase Authentication, scalable MongoDB, and Vercel deployment, this tool helps creators cut content workflows from hours to minutes.</p>
                             <div class="mt-1">
                                 <a href="https://calendly.com/peyton-hoang97/30min" aria-label="Free Consult"
                                     class="boton-elegante" target="_blank">
@@ -945,9 +942,7 @@
                                 title="Etsy Seller Tool"></iframe></div>
                         <div class="recent-work__info">
                             <p class="recent-work-description">Description:
-                                An AI-integrated MERN app designed for new Etsy sellers. From shop names to product SEO
-                                tags, automated branding visuals, and pricing strategies — this platform streamlines
-                                e-commerce setup. Built with Firebase Auth, AWS-ready backend, and Amplify deployment.
+                                An AI-integrated MERN app for new Etsy sellers, automating everything from shop names, product SEO tags, and branding visuals to pricing strategies. Built with Supase Auth and PostgreSQL, this platform streamlines e-commerce setup and boosts seller efficiency.
                             </p>
                             <div class="mt-1">
                                 <a href="https://calendly.com/peyton-hoang97/30min" aria-label="Free Consult"
